2011-06-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fixed a segfault when opening the "Fullscreen resolution" submenu.
  This was caused by the change in ui.h on 06-20. (reported by Krzysztof
  Karkosza)


2011-06-20  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Fixed a bug with F10 creating interlaced screenshots instead of
  non-interlaced.

* cartridge.[ch], ui.c, atari800.man, DOC/USAGE: Ported from Atari800WinPLus -
  an option for enabling/disabling automatic reboot when the cartridge is
  inserted or removed. (Only applies to the main cartridge. After inserting or
  removing a piggyback cartridge, it works as earlier - ie. the system will
  not reboot automatically.)
  
* ui.h, ui_basic.c: Reworked detection of menu end (UI_MENU_END). The
  previous solution stopped working correctly since in the CartManagement menu
  there are hidden menuitems with the "item" field set to NULL which would be
  incorrectly detected as end of menu.


2011-06-17  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.c, DOC/cart.txt: Reverted the last change in the 034M mapping
  regarding switched banks 1 and 2 - on second thought, applying such change
  to a years-old specification without proper discussion is not a good idea.


2011-06-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
*cartridge.c, DOC/cart.txt: Fixed an ages-old bug in the OSS 034M cartridge
  banking scheme. Banks 1 and 2 were switched, which caused all known OSS
  034M dumps to fail. (There actually are only 3 known images of 034M
  cartridges:
  Action! 3.5: http://ftp.pigwa.net/stuff/collections/atari_forever/ROM/ACTION.OSS/ACTION.OSS
  BASIC XL 1.02: http://ftp.pigwa.net/stuff/collections/atari_forever/ROM/BASICXL.OSS/BXL102.OSS
  MAC/65 1.0: http://ftp.pigwa.net/stuff/collections/atari_forever/ROM/MAC65.OSS/MAC65.OSS
  All failed to work before this fix.)
  Additionally the combinations $D5x1 and $D5x5 were incorrectly described as